@@ -1,3 +1,10 @@
+2004-11-09 Paul Jakma <paul@dishone.st>
+
+	* bgp_nexthop.c: collapse bgp_connected_ipvX, bgp_nexthop_cache_ipvX
+	  and cache{1,2}.. into arrays of tables and hence collapse
+          bgp_scan_ipv{4,6} into a single bgp_scan function. Tested, though
+          a long time ago (and this change was hand-merged).
+
 2004-11-04 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
 
 	* bgp_route.c: Remove all code related to VTY_CONTINUE; this feature
